# Euterpe

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  resources.qrc
android/: AndroidManifest.xml
android/java/com/amazzera/euterpe/: MediaStoreReader.java  MediaStoreWatcher.java  MediaStoreWriter.java  SongInfo.java
android/res/drawable/: splash.xml
android/res/layout/: splash_layout.xml
android/res/values/: styles.xml
include/: audio_player.h  metadata_service.h  playback_controller.h  playback_filter_model.h  song.h  song_model.h
qml/components/: ActionButton.qml  Colors.qml  FloatingLabelTextField.qml  HorizontalDivider.qml  ImageItem.qml  MetadataEditor.qml  MusicPlayerControls.qml  SearchBar.qml  SeekBar.qml  SongDetailsTopBar.qml  SongItem.qml  SongListSection.qml  SongQuickView.qml  Toast.qml  TopBar.qml
qml/pages/: MainPage.qml  SongDetailsPage.qml  SplashScreen.qml
src/: audio_player.cpp  metadata_service.cpp  playback_controller.cpp  playback_filter_model.cpp  song.cpp  song_model.cpp
